fix mtgdeck manager random